array.island.Island.scala.error
Compilation error:
Island:5: error: type mismatch;
 found   : Int
 required: Array[Int]
    if (island(i)<island(i+1)) {
               ^Island:5: error: type mismatch;
 found   : Int
 required: Array[Int]
    if (island(i)<island(i+1)) {
                          ^