array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var compt: Int =0
  for (i <- 0 to num.size) {
    if (island(i)<island(i+1)) {
      compt=compt+1
    }
  }
  return compt
}